code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__FromObject__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FromObject__c</fullName>
    <label>From Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>