code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__FromRecordType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FromRecordType__c</fullName>
    <label>From Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>