code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__LookupField__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LookupField__c</fullName>
    <label>Lookup Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>