code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__ProcessType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ProcessType__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Realtime</fullName>
            </value>
            <value>
                <fullName>Async</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>