code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__RollupOperation__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RollupOperation__c</fullName>
    <label>Rollup Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>