code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__ToObject__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ToObject__c</fullName>
    <label>To Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>