code/force-app/main/default/objects/FinServ__RollupByLookupConfig__c/fields/FinServ__UpdateOnChange__c.field-meta.xml
<CustomField>
    <fullName>FinServ__UpdateOnChange__c</fullName>
    <label>Fields Triggering Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>